Revert "modal close icon mobile bugfix"
This reverts commit c8bd9e38f13c603bb4f16527e46f8ba78b3b394c.

--- a/css/style.css
+++ b/css/style.css
@@ -2746,10 +2746,6 @@ div.radio input {
 		right:10px;
 		top:10px;
 	}
-	.modal--close:before,
-	.modal--close:after {
-		margin-left:-9px;
-	}
 	.modal-user__controls {
 		margin-top:30px;
 	}
